84. Refactor Product Create EndPoint