@@ -1,49 +1,33 @@
 package com.rperezv365.apifirst.apifirstserver.controllers;
 
-import com.rperezv365.apifirst.model.CategoryDto;
+import com.rperezv365.apifirst.apifirstserver.config.OpenApiValidationConfig;
 import com.rperezv365.apifirst.model.DimensionsDto;
 import com.rperezv365.apifirst.model.ImageDto;
-import com.rperezv365.apifirst.model.ProductDto;
+import com.rperezv365.apifirst.model.ProductCreateDto;
 import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.context.annotation.Import;
 import org.springframework.http.MediaType;
 
+import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.greaterThan;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @SpringBootTest
+@Import(OpenApiValidationConfig.class)
 class ProductControllerTest extends BaseTest{
 
     @Test
-    void listProducts() throws Exception {
-        super.mockMvc.perform(get(ProductController.BASE_URL)
-                .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.size()", greaterThan(0)));
-    }
-
-    @Test
-    void getProductById() throws Exception {
-        assert super.testProduct.getId() != null;
-        super.mockMvc.perform(get(ProductController.BASE_URL + "/" + super.testProduct.getId())
-                .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(super.testProduct.getId().toString()));
-    }
-
-    @Test
     void testCreateProduct() throws Exception {
-        ProductDto newProduct = ProductDto.builder()
+        ProductCreateDto newProduct = ProductCreateDto.builder()
                 .description("New Product")
                 .cost("5.00")
                 .price("8.95")
-                .categories(Collections.singletonList(CategoryDto.builder()
-                        .category("New Category")
-                        .description("New Category Description")
-                        .build()))
+                .categories(List.of("ELECTRONICS"))
                 .images(Collections.singletonList(ImageDto.builder()
                         .url("http://example.com/image.jpg")
                         .altText("Image Alt Text")
@@ -61,6 +45,22 @@ class ProductControllerTest extends BaseTest{
                 .andExpect(status().isCreated())
                 .andExpect(header().exists("Location"));
 
+    }
+
+    @Test
+    void listProducts() throws Exception {
+        mockMvc.perform(get(ProductController.BASE_URL)
+                        .accept(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.length()", greaterThan(0)));
+    }
+
+    @Test
+    void getProductById() throws Exception {
+        mockMvc.perform(get(ProductController.BASE_URL + "/{productId}", testProduct.getId())
+                        .accept(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id", equalTo(testProduct.getId().toString())));
     }
 
 }
